--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img id="logo-img" src="images/logo.png" alt="logo of Oldagram" />
         <img
           class="avatar-img"
-          src="images/user-avatar.png"
+          src="images/user-furkan.png"
           alt="User avatar"
         />
       </header>
